--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.14.1"
   }
